--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,23 +1,37 @@
 name: Deploy
 
-on:
-  push:
-    branches:
-      - master
+on: [push]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+        - uses: actions/checkout@v2
+        - uses: actions/setup-node@v1
+        - run: npm install ci
+        - run: npm test
   gh-pages:
-    runs-on: ubuntu-20.04
+    if: github.ref == 'refs/heads/master'
+    needs: [test]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - run: npm install ci
       - run: npm run build
       - run: npm run export
-      - uses: peaceiris/actions-gh-pages@v3
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./html
           cname: covidratio.com
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
+      - name: Purge Cloudflare Cache
+      - run: >-
+          curl -f -X POST
+          --url https://api.cloudflare.com/client/v4/zones/9a6c6fd6b49f38234bc4f1301b67906e/purge_cache
+          --header 'Authorization: Bearer ${{ secrets.CF_API_TOKEN }}'
+          --header 'Content-Type: application/json'
+          --data '{"purge_everything":true}'
