--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,10 @@
     "rules": {
         "react/react-in-jsx-scope": "off",
         "react/jsx-filename-extension": "off",
-        "react/prop-types": "off"
+        "react/prop-types": "off",
+        "global-require": "off"
+    },
+    "parserOptions": {
+      "ecmaVersion": 11
     }
-}
+  }
