--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
         "react/react-in-jsx-scope": "off",
         "react/jsx-filename-extension": "off",
         "react/prop-types": "off",
-        "global-require": "off"
+        "global-require": "off",
+        "jsx-a11y/anchor-is-valid": "off"
     },
     "parserOptions": {
       "ecmaVersion": 11
