--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 name: Test & Deploy
 
-on: [push]
+on: push
 
 jobs:
   test:
@@ -28,10 +28,3 @@ jobs:
           cname: covidratio.com
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
-      - name: Purge Cloudflare Cache
-        run: >-
-          curl -f -X POST
-          --url https://api.cloudflare.com/client/v4/zones/9a6c6fd6b49f38234bc4f1301b67906e/purge_cache
-          --header 'Authorization: Bearer ${{ secrets.CF_API_TOKEN }}'
-          --header 'Content-Type: application/json'
-          --data '{"purge_everything":true}'
