--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,7 @@ jobs:
         - uses: actions/checkout@v2
         - uses: actions/setup-node@v1
         - run: npm install ci
+        - run: npm run build
         - run: npm test
   gh-pages:
     if: github.ref == 'refs/heads/master'
