--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,8 @@ jobs:
     steps:
         - uses: actions/checkout@v2
         - uses: actions/setup-node@v1
+          with:
+            node-version: '14'
         - run: npm install ci
         - run: npm run build
         - run: npm test
@@ -18,6 +20,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
+        with:
+          node-version: '14'
       - run: npm install ci
       - run: npm run build
       - run: npm run export
