--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,3 +33,15 @@ jobs:
           cname: covidratio.com
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
+    purge:
+      if: github.ref == 'refs/heads/master'
+      needs: [gh-pages]
+      runs-on: ubuntu-latest
+      steps:
+        - name: Purge Cloudflare Cache
+          run: >-
+            curl -f -X POST
+            --url https://api.cloudflare.com/client/v4/zones/9a6c6fd6b49f38234bc4f1301b67906e/purge_cache
+            --header 'Authorization: Bearer ${{ secrets.CF_API_TOKEN }}'
+            --header 'Content-Type: application/json'
+            --data '{"purge_everything":true}'
