--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test": "eslint --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@cinematix/next-cloudflare": "^1.1.3",
     "@cinematix/reactor": "^2.0.0",
-    "@cloudflare/kv-asset-handler": "0.0.12",
     "@wikimedia/react.i18n": "^2.0.2",
     "bootstrap": "^4.5.2",
     "luxon": "^1.25.0",
