--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "eslint --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@chickaree/language-loader": "^1.0.2",
     "@cinematix/next-cloudflare": "^1.1.3",
     "@cinematix/reactor": "^2.0.0",
     "@wikimedia/react.i18n": "^2.0.2",
