--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@wikimedia/react.i18n": "^2.0.2",
     "bootstrap": "^4.5.2",
     "luxon": "^1.25.0",
-    "next": "9.5.4",
+    "next": "^10.0.4",
     "node-fetch": "^2.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
