Add previous snapshot url

--- a/data/florida.yml
+++ b/data/florida.yml
@@ -1,5 +1,7 @@
 # Weekly Report
 # http://ww11.doh.state.fl.us/comm/_partners/covid19_report_archive/covid19-data/covid19_data_latest.pdf
+# Previous Snapshots
+# https://web.archive.org/web/http://ww11.doh.state.fl.us/comm/_partners/covid19_report_archive/covid19-data/covid19_data_latest.pdf
 
 label: Florida
 updated: '2021-08-13'
