Add tweet script

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
+    "root": true,
     "extends": ["airbnb", "airbnb/hooks"],
     "env": {
-      "browser": true
+      "browser": true,
+      "node": true
     },
     "rules": {
         "react/react-in-jsx-scope": "off",
